Bug 1126196 - In-content prefs: Fix alignment issue on Advanced tab. r=jaws
UltraBlame original commit: 34e594ff11597967f9c8c3acce8cd49ef36d31c0

--- a/browser/themes/osx/preferences/in-content/preferences.css
+++ b/browser/themes/osx/preferences/in-content/preferences.css
@@ -58,6 +58,11 @@ filefield + button {
   border-bottom: none;
 }
 
+#advancedPrefs {
+  margin-right: 0; 
+  margin-left: 0;
+}
+
 
 
 
