--- a/browser/themes/windows/preferences/in-content/preferences.css
+++ b/browser/themes/windows/preferences/in-content/preferences.css
@@ -13,6 +13,10 @@ filefield + button {
   -moz-margin-start: -4px;
 }
 
+#advancedPrefs {
+  padding-bottom: 0; 
+}
+
 
 
 
